--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "jsencrypt": "^3.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
