--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "jsencrypt": "^3.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -23,6 +22,9 @@
     "@types/react-dom": "^18.3.2",
     "@vercel/node": "^3.2.28",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
   }
